<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/new_nav_dashboard"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/dashboard_fragment_label" />

        <item
            android:id="@+id/new_nav_profile"
            android:icon="@drawable/ic_baseline_account_box_24"
            android:title="@string/profile_fragment_label" />
        <item
            android:id="@+id/new_nav_proj_list"
            android:icon="@drawable/progress1"
            android:title="@string/project_fragment_label"/>
        <item
            android:id="@+id/new_nav_notifications"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/notification_fragment_label" />
        <item
            android:id="@+id/new_nav_rewards"
            android:icon="@drawable/my_rewards"
            android:title="@string/rewards_fragment_label" />
        <item
            android:id="@+id/new_nav_settings"
            android:icon="@drawable/ic_baseline_settings_applications_24"
            android:title="@string/settings_fragment_label" />
        <item
            android:id="@+id/new_nav_help"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/help_fragment_label" />
    </group>
</menu>